# CPP_wildlife-sim

./: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  Belladonna.h  CMakeLists.txt  Dandelion.cpp  Dandelion.h  Fox.cpp  Fox.h  Grass.h  Guarana.cpp  Guarana.h  Human.cpp  Human.h  Organism.h  Plant.cpp  Plant.h  README.md  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Sheep.h  Simulator.cpp  Simulator.h  SosnowskysHogweed.cpp  SosnowskysHogweed.h  Terminal.cpp  Terminal.h  Tortoise.cpp  Tortoise.h  VisualInterface.cpp  VisualInterface.h  Wolf.h  World.cpp  World.h  main.cpp
